# nucleotides

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: all_benchmark.rs  random.fa  sequence_benchmark.rs
benches/benchmarks/: dna_benchmark.rs  fasta_benchmark.rs  hash_benchmark.rs  mod.rs
src/: dna.rs  fasta.rs  hash.rs  lib.rs  seq.rs
src/alphabet/: amino.rs  mod.rs  nucleotides.rs
src/io/: fasta.rs  fastq.rs  mod.rs
tests/: alphabet_test.rs  dna_test.rs  fasta_test.rs  hash_test.rs  mod.rs  seq_test.rs
tests/io/: fasta_test.rs  fastq_test.rs  mod.rs
