[package]
name = "nuc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rand = "0.8.5"

[lib]
name = "nuc"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "all_benchmark"
harness = false
